This file documents the revision history for Perl extension Escape.

0.05

0.04 2009-08-18
        - Add encrypted passwords (eventually, we'll want this SSL only).
        - Add authentication.
        - Fix quoting in google maps for Côte d'Ivoire

0.03 2009-08-17
        - Google maps zoom set based on area (which we now capture).  This is
          actually a cheap hack and needs to be more robust, but it works.
        - starts_with is now a filter
        - Custom 404
        - Move developer tests to xt/

0.02 2009-08-16  18:17:00
        - Lots of features, including country lists, Google map integration
          and a number of basic pages explaining who, what, etc.-
    
0.01  2009-08-09 16:57:48
        - initial revision, generated by Catalyst