@@ -20,17 +20,25 @@ no_index:
     - xt
 requires:
   Catalyst::Action::RenderView: 0
+  Catalyst::Authentication::Realm::SimpleDB: 0
   Catalyst::Helper::View::TT: 0
+  Catalyst::Plugin::Authentication: 0
   Catalyst::Plugin::Cache: 0.08
   Catalyst::Plugin::ConfigLoader: 0
+  Catalyst::Plugin::Session: 0
+  Catalyst::Plugin::Session::State::Cookie: 0
+  Catalyst::Plugin::Session::Store::FastMmap: 0
+  Catalyst::Plugin::StackTrace: 0
   Catalyst::Plugin::Static::Simple: 0
   Catalyst::Runtime: 5.80007
   Config::General: 0
+  DBIx::Class::EncodedColumn: 0.00002
   DBIx::Class::TimeStamp: 0.12
   HTML::SimpleLinkExtor: 1.23
   Number::Format: 1.72
+  Test::WWW::Mechanize::Catalyst: 0.51
   Text::Unaccent: 1.08
   parent: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: 0.05
