@@ -25,7 +25,7 @@ sub index :Path :Args(0) {
     my ( $self, $c ) = @_;
 
     $c->logout;
-    $c->response->redirect($c->uri_for('/'));
+    $c->response->redirect( $c->flash->{path} || $c->uri_for('/') );
 }
 
 
