@@ -8,8 +8,8 @@ use base 'DBIx::Class::Schema';
 __PACKAGE__->load_namespaces;
 
 
-# Created by DBIx::Class::Schema::Loader v0.04006 @ 2009-08-19 20:54:04
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:AI8Mns6YakgTmdidEhy5hw
+# Created by DBIx::Class::Schema::Loader v0.04006 @ 2009-08-19 21:07:32
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:LvwmhS9Y99bOrSl1dD0pIw
 
 
 # You can replace this text with custom content, and it will be preserved on regeneration
