@@ -5,7 +5,7 @@ use warnings;
 
 use base 'DBIx::Class';
 
-__PACKAGE__->load_components("InflateColumn::DateTime", "TimeStamp", "Core");
+__PACKAGE__->load_components("InflateColumn::DateTime", "TimeStamp", "EncodedColumn", "Core");
 __PACKAGE__->table("poll");
 __PACKAGE__->add_columns(
   "id",
@@ -43,8 +43,8 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.04006 @ 2009-08-19 20:54:04
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:hS2k7PLUMECw9uOEWfsCgw
+# Created by DBIx::Class::Schema::Loader v0.04006 @ 2009-08-19 21:07:32
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:DN0cVIWEuMtCe7mOg76KTg
 
 
 # You can replace this text with custom content, and it will be preserved on regeneration
