@@ -5,7 +5,7 @@ use warnings;
 
 use base 'DBIx::Class';
 
-__PACKAGE__->load_components("InflateColumn::DateTime", "TimeStamp", "Core");
+__PACKAGE__->load_components("InflateColumn::DateTime", "TimeStamp", "EncodedColumn", "Core");
 __PACKAGE__->table("user");
 __PACKAGE__->add_columns(
   "id",
@@ -71,9 +71,22 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.04006 @ 2009-08-19 20:54:04
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:4POwXtuLBShxnlPg5PmyZw
+# Created by DBIx::Class::Schema::Loader v0.04006 @ 2009-08-19 21:07:32
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:ARoCpuxkQ3xVLxkPAVy4WA
 
+__PACKAGE__->add_columns(
+    'password' => {
+        data_type => "TEXT",
+        size => undef,
+        encode_column => 1,
+        encode_class => 'Digest',
+        encode_args => {
+            algorithm => 'SHA-1',
+            format => 'hex',
+            salt_length => 10
+        },
+        encode_check_method => 'check_password',
+    },
+);
 
-# You can replace this text with custom content, and it will be preserved on regeneration
 1;
