@@ -1,10 +1,8 @@
 use strict;
 use warnings;
-use Test::More tests => 3;
+use Test::More tests => 2;
 
-BEGIN { use_ok 'Catalyst::Test', 'Escape' }
+use Catalyst::Test 'Escape';
 BEGIN { use_ok 'Escape::Controller::Login' }
 
 ok( request('/login')->is_success, 'Request should succeed' );
-
-
