@@ -6,7 +6,6 @@ use warnings;
 use Escape::Schema;
 
 my $schema = Escape::Schema->connect('dbi:SQLite:db/escape.db');
-
 my @users = $schema->resultset('User')->all;
 
 foreach my $user (@users) {
